--- a/Trampolin.FilterSportTecResults.csproj
+++ b/Trampolin.FilterSportTecResults.csproj
@@ -6,7 +6,14 @@
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <Nullable>disable</Nullable>
 	  <ImplicitUsings>false</ImplicitUsings>
+	  <PlatformTarget>AnyCPU</PlatformTarget>
+	  <PackageIcon></PackageIcon>
+	  <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="favicon.ico" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<Reference Include="System.Windows.Forms" />
@@ -15,6 +22,13 @@
 	
   <ItemGroup>
     <PackageReference Include="CsvTools" Version="1.0.12" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <None Update="favicon.ico">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
